clusters/talos-robbinsdale/apps/media/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: media
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: envoy-gateway-system
  hostnames:
    - "media.lukehouge.com"
    - "media.rajsingh.info"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: sonarr
          port: 8989
          weight: 1
      matches:
        - path:
            value: "/sonarr"
    - backendRefs:
        - group: ""
          kind: Service
          name: radarr
          port: 7878
          weight: 1
      matches:
        - path:
            value: "/radarr"
    - backendRefs:
        - group: ""
          kind: Service
          name: prowlarr
          port: 9696
          weight: 1
      matches:
        - path:
            value: "/prowlarr"
